# systamator-v2

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: M0-CHECKLIST.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/agents/: conductor.agent.json  ic-ssh.agent.json  mgr-ops.agent.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_embeddings.sql
src-tauri/src/: agents.rs  browser.rs  cache.rs  cli_providers.rs  code.rs  connectors.rs  db.rs  docker.rs  embeddings.rs  importer.rs  keychain.rs  lib.rs  main.rs  mcp.rs  orchestrator.rs  pii_guard.rs  resources.rs  runs.rs  skills.rs  ssh.rs  trusted_keys.rs  web_scrape.rs  web_search.rs  worktree.rs
src/components/palette/: Palette.tsx
src/components/ui/: Button.tsx  Card.tsx  Chip.tsx  Empty.tsx  StatusDot.tsx  Toaster.tsx  TopBar.tsx  index.ts
src/lib/: api.ts  ipc.ts  keychain.ts  toast.ts
src/screens/agents/: AgentsScreen.tsx
src/screens/browser/: BrowserScreen.tsx
src/screens/chat/: ChatScreen.tsx
src/screens/code/: CodeScreen.tsx
src/screens/fleet/: FleetScreen.tsx
src/screens/goals/: GoalsScreen.tsx
src/screens/home/: HomeScreen.tsx
src/screens/inbox/: InboxScreen.tsx
src/screens/infra/: AppsScreen.tsx  ContainersScreen.tsx  CronScreen.tsx  FlowsScreen.tsx  _shared.tsx
src/screens/runs/: RunDetailScreen.tsx
src/screens/settings/: AccountTab.tsx  AdvancedTab.tsx  AgentsTab.tsx  DiagnosticsPanel.tsx  McpTab.tsx  ProvidersTab.tsx  SettingsScreen.tsx  TrustedKeysCard.tsx
src/screens/skills/: SkillsScreen.tsx
src/styles/: index.css
src/types/: domain.ts
