[package]
name = "systamator-v2"
version = "0.1.0"
description = "Systamator v2 — agent-first infrastructure OS"
authors = []
edition = "2021"

[lib]
name = "systamator_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization + ids
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }

# State + caching
once_cell = "1"
regex     = "1"

# OS keychain — replaces v1's plaintext JSON credentials.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# SSH (libssh2) — ported from v1 unchanged.
ssh2 = "0.9"

# HTTP client (web search, OpenSpace MCP HTTP fallback, OAuth flows).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "gzip", "brotli", "json"] }

# Postgres via sqlx — same store as v1, schema is additive.
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Hashing for credential fingerprints + run ids.
sha2 = "0.10"
base64 = "0.22"
url = "2"

# M2 — semantic skill search.
# fastembed needs ONNX Runtime; ort downloads prebuilt binaries at build
# time so users don't have to install anything system-wide. First build
# adds ~2 min. The model (~90 MB) is fetched on first embed call, cached
# under src-tauri/.fastembed_cache/ (gitignored).
ort       = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls"] }

# M3.2 — browser eval return channel.
# The browsed page has no access to Tauri's IPC, so we run a tiny
# loopback HTTP listener on 127.0.0.1 and inject a bootstrap script
# that POSTs results back. Nothing is exposed externally — bind
# address is strictly loopback.
tiny_http = "0.12"

# M5 — signed skill manifests. ed25519 is cheap to verify, keys are
# 32 bytes, signatures 64 bytes — easy to paste into a JSON bundle.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
